--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "Nick Slowey",
+	
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -14,5 +14,6 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+	"author" : "Nick Slowey"
 }
